[project]
name = "pytheatrekontrol"
version = "1.0.0"
description = "A batteries included libruary to facilitate communication with as many lighting consoles as possible, leveraging OSC."
authors = [
    {name = "Morph Tollon",email = "code@morphtollon.co.uk"}
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["osc", "sound", "midi", "sockets", "transport", "Lighting", "Theatre"]
requires-python = "<4.0.0,>=3.13"
dependencies = [
    "pyopensoundcontrol (>=1.0.15,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[project.urls]
Repository = "https://github.com/Theatre-Tools/PyTheatreKontrol"
Homepage = "https://github.com/Theatre-Tools/PyTheatreKontrol"
Issues = "https://github.com/Theatre-Tools/PyTheatreKontrol/issues"



[dependency-groups]
dev = [
    "pyright (>=1.1.408,<2.0.0)",
    "ruff>=0.14.10",
    "lefthook (>=2.0.13,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "pytest-timeout (>=2.2.0,<3.0.0)"
]


docs = [
    "mkdocs-material (>=9.7.1,<10.0.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.5.0,<2.0.0)",
    "mkdocs-git-committers-plugin-2 (>=2.5.0,<3.0.0)",
    "mike (>=2.1.3,<3.0.0)",
    "markdown (>=3.10,<4.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "pytk" }]


[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["pytk*"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "W1", "W2", "F", "RUF", "I"]

[tool.ruff]
line-length = 127

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [".venv"]